# secretsanta-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: data.rs  email.rs  main.rs
