[package]
name = "secretsanta-server"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4.19", features = ["serde"]}
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rusqlite = "0.24.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
